Bug 93085 - Application window is too high, status bar is not visible (1024x600 resolution), size of module launch inherited from the StartCenter which gets a fixed minimum height (comment 14)
Summary: Application window is too high, status bar is not visible (1024x600 resolutio...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 93862 96027 98060 99682 104304 104324 114079 114483 127788 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2015-08-02 23:37 UTC by Regina Henschel
Modified: 2019-09-26 14:32 UTC (History)
21 users (show)

See Also:
Crash report or crash signature:


Attachments
zipped screenshots (398.31 KB, application/zip)
2016-02-19 16:12 UTC, u.fuchs
Details
Screenshots LibreOffice 5.2.0 and LibreOffice 5.2.0 PORTABLE (140.17 KB, application/zip)
2016-08-26 18:53 UTC, u.fuchs
Details
LibreOffice 5 running on Dell 5855 FullHD (601.75 KB, image/png)
2018-03-17 06:49 UTC, russianneuromancer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2015-08-02 23:37:51 UTC
I use LibreOffice with a netbook with 1024 x 600 pixel. I cannot reduce the height of the application window far enough, so that I can see and use the status bar. This was no problem in LibreOffice 4.2, but is a problem in newer versions. If you will force a minimal window height, it should be small enough to display the whole window on a netbook.
Comment 1 Johnny_M 2015-11-12 20:39:16 UTC
I can confirm this: I just switched from LO 4.4.6 to 5.0.3 by replacing "ppa:libreoffice/libreoffice-4-4" with "ppa:libreoffice/libreoffice-5-0" and there is the following issue: The LO window is too high for my 1024x600 netbook screen. I tried resizing the window, but even with smallest hight the window doesn't fit - it is exactly the status bar that is missing at the bottom. Or alternatively the window caption if the window is moved up. That is under all LO parts (Writer, Calc, etc.).

Additionally, I noticed after the update that maximizing the window did not actually maximize it, but just made the window borders disappear. But I could work around that by resizing the width to fill the whole screen.

Note: I usually use LO with its window maximized. And while all configuration settings seem to have been taken over from LO 4.4 to 5.0, the maximization (or the window width) was not - LO 5.0 started with a smaller window width after the update.

System:
- ASUS EeePC R101 netbook
- 1024x600 screen, Intel on-board graphics
- 2GB RAM
- Linux Mint 17.1 MATE, 64bit (based on Ubuntu 14.04 Trusty; Kernel 3.13.0-37-generic; MATE 1.8.1)
Comment 2 Johnny_M 2015-11-12 20:43:09 UTC
P.S.: The original bug report was for 32-bit Windows. I changed the "Hardware" field to "All" since it also affects 64-bit Linux.
Comment 3 Maxim Monastirsky 2015-11-12 20:49:06 UTC
*** Bug 93862 has been marked as a duplicate of this bug. ***
Comment 4 Maxim Monastirsky 2015-11-12 20:51:18 UTC
Well, the system req. page says that 1024x768 is the minimum supported:

http://www.libreoffice.org/get-help/system-requirements/
Comment 5 Johnny_M 2015-11-12 21:24:30 UTC
More details (like in bug 93862): LO actually starts with a correct window hight, but the window becomes too high after one closes a document.

Test procedure:
1. Start LO
2. Click, e.g., on "Writer Document" to open an empty document
3. Close the Writer document (NOT the whole LO)
4. Click, e.g., on "Writer Document" to open an empty document

Expected results:
1. LO starts maximized (from before closing), with correct hight
2. Empty document is opened with correct window hight - status bar is visible
3. Correct hight (one can see the "Help" and "Extensions" buttons correctly at the bottom)
4. Empty document is opened with correct window hight - status bar is visible

Actual results:
3. Window too high - only the tops of the "Help" and "Extensions" buttons visible
4. Window too high - status bar not visible (can be made visible by moving the window up holding down the Alt key, but then the window caption disappears)

Similarly if LO is started by opening, e.g., a Writer document on the disk - it starts with correct hight and just to the wrong one if the document is closed.
Comment 6 Maxim Monastirsky 2015-11-24 14:56:25 UTC
*** Bug 96027 has been marked as a duplicate of this bug. ***
Comment 7 V Stuart Foote 2015-11-24 15:10:01 UTC
Seems linked to the minimum height size for the StartCenter is "bleeding" over to the other modules.

Suspect this is the case, as between 5.0.3.2 and current master we have
added the Remote Files feature and the minimum window height for all
components was bumped taller.
 
The behavior of the StartCenter affects each component being launched from it, we are setting a minimum height for the component at that launch.

The same component launched without use of the the StartCenter is not affected and its UI can be fully resized in height.  But when that document is closed the UI height will resize to the minimum of the StartCenter backingWindow

Suspect this is a unintended complication of Kendy's work on bug 91971
Comment 8 V Stuart Foote 2015-11-24 16:05:19 UTC
(In reply to V Stuart Foote from comment #7)

> Suspect this is a unintended complication of Kendy's work on bug 91971

Actually it predates that considerably, and is present in the 4.2 builds--Kendy's patch for tdf#91971 just adjusted calculation of the minimum height to be able to hold all the button widgets of the MenuBar. 


Simple STR:

1. launch calc directly
2. resize to height desired
3. close calc -> opens start center
4. launch calc from start center
5. able to resize shorter than start center? No...

Height of components has been bound to StartCenter from some point after the 4.2.0.4 release. Puts it right in the midst of major tweaking of the StartCenter backingwindow.cxx and backingcomp.cxx

Seems the definition of the StartCenter minimum UI height is being picked up and incorrectly controlling height for launch all components. 

bisect...

OK Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

BAD Version: 4.2.1.1
Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b

BAD Version: 4.2.2.1
Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f

And all 4.3, 4.4, 5.0 and 5.1 builds.
Comment 9 Robinson Tryon (qubit) 2015-12-10 07:33:45 UTC Comment hidden (obsolete)
Comment 10 u.fuchs 2016-02-10 20:52:11 UTC
Just installed LO 5.1 (TDF -Version, not Ubuntu packages) on Acer Netbook (1024x600). It is even worse! Due to the additional icon in the Start-Center fits nothing. Smallest size of the window appears to be 1028x656 now. Unfortunately, there are always made new changes to the user interface. No real improvements.
Comment 11 u.fuchs 2016-02-19 16:12:01 UTC
Created attachment 122804 [details]
zipped screenshots

Screenshots of LibreOffice Portable 5.1 on Kubuntu Linux
Comment 12 u.fuchs 2016-02-19 16:16:30 UTC
I installed LibreOffice Portable 5.1 on a USB stick and started it on my netbook (1024x600 resolution) with linux (Ubuntu 14.04 / Wine 1.6). Unlike the Linux version 5.1 everything fits. Even as the taskbar is set to always visible. See my screenshots. This should also be possible with the Linux-Version.
Comment 13 V Stuart Foote 2016-02-22 04:26:19 UTC
*** Bug 98060 has been marked as a duplicate of this bug. ***
Comment 14 V Stuart Foote 2016-02-22 05:42:24 UTC
Modules being launched from the Start Center, i.e. STARTMODULE, are inheriting its height, but for bug 65826 (at 4.2.1.1), as adjusted in bug 91971 (at 5.0.0.2) we are establishing a minimum height for the Start Center. Meaning unfortunately that documents for modules launched from the Start Center can't be shrunk to fit a 600px display, or a users preferred frame size.

@Caolán, Kendy -- instead of inheriting from the STARTMODULE when launched, could the starting size/placement also be recorded per module into the profile, and use taht? Expanding Caolán's work in https://cgit.freedesktop.org/libreoffice/core/commit/?id=b1314f22eb8de4359b5360194c04996351e9a6c2 and maybe provide enhancements for bug 75644
Comment 15 Maxim Monastirsky 2016-05-04 17:48:54 UTC
*** Bug 99682 has been marked as a duplicate of this bug. ***
Comment 16 Christopher 2016-05-04 18:07:26 UTC
Whoops, sorry for that duplicate.

I'm having the same issue in an XFCE version of Puppy Linux, LO 5.0.4 and 5.1.1.3...
Comment 17 Johnny_M 2016-05-14 13:09:17 UTC
I've just updated from LO 5.0.6 to LO 5.1.3 (by changing ppa:libreoffice/libreoffice-5-0 to ppa:libreoffice/libreoffice-5-1) on Linux Mint 17.1, and it's even worse there:

(In reply to Johnny_M from comment #5)
> More details (like in bug 93862): LO actually starts with a correct window
> hight, but the window becomes too high after one closes a document.

That is no longer true - the LO StartCenter now always starts too high.

> Test procedure:
> 1. Start LO
> 2. Click, e.g., on "Writer Document" to open an empty document
> 3. Close the Writer document (NOT the whole LO)
> 4. Click, e.g., on "Writer Document" to open an empty document
> 
> Expected results:
> 1. LO starts maximized (from before closing), with correct hight
> 2. Empty document is opened with correct window hight - status bar is visible
> 3. Correct hight (one can see the "Help" and "Extensions" buttons correctly
> at the bottom)
> 4. Empty document is opened with correct window hight - status bar is visible
> 
> Actual results:
> 3. Window too high - only the tops of the "Help" and "Extensions" buttons
> visible
> 4. Window too high - status bar not visible (can be made visible by moving
> the window up holding down the Alt key, but then the window caption
> disappears)

So, the above steps 1 and 2 now fail, too - the window is too high on both.

On a side note, the StartCenter maximization doesn't work either - the StartCenter starts with its window moved down about about the hight of the title bar, if started maximized.

> Similarly if LO is started by opening, e.g., a Writer document on the disk -
> it starts with correct hight and jumps to the wrong one if the document is
> closed.

That is still true. And the work-around, when one wants to create a new document bypassing the StartCenter, is to start the affected LO part directly. E.g., on Linux:
- Writer: /usr/lib/libreoffice/program/swriter (alternatively: "lowriter" or "libreoffice --writer")
- Calc: /usr/lib/libreoffice/program/scalc (alternatively: "localc" or "libreoffice --calc")
etc. One could, e.g., create desktop launcher(s) pointing to them.

One can then also open a new document of another LO part from within the one started (using File -> New in the menu), and it will open correctly.
Comment 18 c.buhtz 2016-05-30 10:53:58 UTC
I want to add my scenario here. But first I have to say the workaround with starting swriter directly work for me fine.

I use a Samsung N220 netbook with 1024x600. The StartCenter can not be maximized (in my default config).

I use Siduction (Debian unstable) with LXQt (xfwm4 as windowmanager) and LibreOffice 5.1.3.2 10m0(Build:2).
I tried to install libreoffice-gtk3, libreoffice-gnome and libreoffice-kde packages (tricks I found on the web). Doesn't solve the problem.

Setting the window manager to openbox solved the problem. The StartCenter now behave like expected without problems.
Comment 19 Christopher 2016-08-25 20:58:51 UTC
I'm in the process of switching from Puppy Linux to Mint, for reasons not germane to this bug.

I can report that, for me, it seems to be fixed. Linux Mint 18, MATE flavor, LibreOffice 5.1.4.2. I can't say that's the initial version that Mint ships with -- I've applied a couple updates to the system since installing, and LO may have been affected by that (I think it was, but I wasn't paying enough attention to be sure).

I'm going to mark this as Resolved/Fixed -- if anyone else is having a different experience, would they please reopen the bug?

Thanks...
Comment 20 Yan Pas 2016-08-26 11:17:27 UTC
V 5.1.5, still reproducible.
STR:
1) Open Lo main window
2) Open writer, try to resize
Comment 21 Johnny_M 2016-08-26 12:51:19 UTC
Issue still exists for me as in comment 17 with:
- Linux Mint 17.1, 64-bit, MATE 1.8.1 (LTS, based on Ubuntu 14.04.1), from LO PPA:
Version: 5.1.5.2
Build ID: 1:5.1.5~rc2-0ubuntu1~trusty1
CPU Threads: 2; OS Version: Linux 3.13; UI Render: default;
Locale: de-DE (en_GB.UTF-8); Calc: group

- Debian liveUSB, 32-bit, Gnome 3.18.2:
Version: 5.2.2.0.0+
Build ID: f90be96ed400a5471d6c3a5cfa5087957803a9fe
CPU Threads: 2; OS Version: Linux 4.3; UI Render: default; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:libreoffice-5-2, Time: 2016-08-25_12:37:40
Locale: en-US (en_US.UTF-8); Calc: group


Both on an Asus EeePC netbook with Intel Atom N450.

On the other hand, I couldn't reproduce the issue with WinXP Home SP3, 32-bit on the same machine. Neither with the LO 5.0.5, nor with the LO 5.2.0 release. (Although the "Create:" icons in the Start Center of the latter are a bit too large - of "Base Database" only the top is visible, but the "Help" and "Extensions" buttons appear correctly.)
Comment 22 u.fuchs 2016-08-26 18:53:26 UTC
Created attachment 127040 [details]
Screenshots LibreOffice 5.2.0 and LibreOffice 5.2.0 PORTABLE
Comment 23 u.fuchs 2016-08-26 18:59:58 UTC
Problem still exist for me. I am using now LO 5.2.0 TDF-Version not from the repositories on Kubuntu-Linux 14.04 netbook with screen 1024x600)
KDE has the possibility to force the windowsize of 1024x600. So I can work. It just amazes me that LibreOffice 5.2.0 PORTABLE is running on my netbook with correct window size under Wine (Windows replacement on Linux).
Comment 24 Rpnpif 2016-10-09 14:06:19 UTC
This issue exists both on Linux Debian and others and on MS Windows 8.
Comment 25 m.a.riosv 2016-11-30 23:19:26 UTC
*** Bug 104304 has been marked as a duplicate of this bug. ***
Comment 26 Telesto 2016-12-02 13:17:35 UTC
*** Bug 104324 has been marked as a duplicate of this bug. ***
Comment 27 QA Administrators 2017-12-03 18:57:44 UTC Comment hidden (obsolete)
Comment 28 Maxim Monastirsky 2017-12-04 08:32:49 UTC
*** Bug 114079 has been marked as a duplicate of this bug. ***
Comment 29 Maxim Monastirsky 2017-12-15 09:40:11 UTC
*** Bug 114483 has been marked as a duplicate of this bug. ***
Comment 30 russianneuromancer 2018-03-17 06:49:29 UTC
Created attachment 140669 [details]
LibreOffice 5 running on Dell 5855 FullHD

Hello!

> Well, the system req. page says that 1024x768 is the minimum supported

Maxim, issue is reproducible on following configurations:

1280x800 Lenovo Miix2 8 
1280x720 Dell 5855 HD
1920x1080 with default 200% scaling - Dell 5855 FullHD

All mentioned devices is 8 inch tablets running Ubuntu 17.10. Screenshot from latest device is attached - additionally, there LibreOffice refuse to switch fullscreen for some reason, probably because it doesn't like 1920x1080 with 200% scaling (which probably translates to 960x540).

So, all configurations is meet system requirements.
Comment 31 Buovjaga 2018-07-07 17:39:10 UTC
Bisected with 43max to

commit 9b23875ab461a73e0f97812500def130b265f73e
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Thu May 28 18:29:38 2015 +0800

    source-hash-840e7f004354ebe1239b9271dd758839c477ca7c
    
    commit 840e7f004354ebe1239b9271dd758839c477ca7c
    Author:     Zolnai Tamás <tamas.zolnai@collabora.com>
    AuthorDate: Fri Jan 17 20:10:06 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Jan 21 15:42:57 2014 +0000
    
        fdo#65826 and fdo#73605: set a minimum size to start center
    
        This minimum size calculated like this:
        width: sidebar optimal width + width of text appearing in
        the thumbnail view when no recent document is available.
        height: menu width + optimal width of GtkBox containing
        buttons.

Adding Cc: to Tamás Zolnai
Comment 32 Caolán McNamara 2018-07-19 10:27:18 UTC
what we could try is to save the orig min size and restore it after the start centre is replaced. https://gerrit.libreoffice.org/#/c/57722/
Comment 33 Commit Notification 2018-07-19 14:50:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fce3d0eec508c14beb2bc4ad3b7982abf6ec3c4a

tdf#93085 restore orig min window size after startcenter...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 34 Caolán McNamara 2018-07-19 14:51:52 UTC
I wonder if that commit keeps everyone happy wrt this bug ?
Comment 35 Xisco Faulí 2018-09-12 12:01:33 UTC
(In reply to Caolán McNamara from comment #34)
> I wonder if that commit keeps everyone happy wrt this bug ?

Buovjaga, You bisected this bug...
Is it fixed after Caolán commit ?
Comment 36 Buovjaga 2018-09-12 21:30:59 UTC
(In reply to Xisco Faulí from comment #35)
> (In reply to Caolán McNamara from comment #34)
> > I wonder if that commit keeps everyone happy wrt this bug ?
> 
> Buovjaga, You bisected this bug...
> Is it fixed after Caolán commit ?

Yes, the minimum height restriction for modules is gone. Caolán was wondering about reporter happiness - no comment about that, but let's close.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: aaa3c31ba79b1b3d335dcf55d72837a13411b45e
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 11th 2018
Comment 37 Christopher 2019-01-13 19:55:22 UTC
The old behavior is once again present in LibreOffice 6.0.7 and in 6.1.4 both, at least on 64-bit Debian-based OSes. I manually installed 6.1.4.2 over whatever 6.0.7.x version came with Xubuntu 18.04 (my current OS) and this did not resolve the issue.

If I open LibreOffice to the Start Center, it will not size to my 1024x600 screen. If I open a document from the file manager, it will. I suppose something got rolled back after a bit... unfortunately.

It would be nice if this were fixed again in the next revision of LibreOffice, and considerably nicer if it actually stayed that way this time.
Comment 38 Johnny_M 2019-01-13 20:59:07 UTC
(In reply to Christopher from comment #37)
> The old behavior is once again present in LibreOffice 6.0.7 and in 6.1.4

The fix in comment 33 was applied to the (coming) version 6.2 and later. Not those. Please re-open if present in LO 6.2 - see https://qa.blog.documentfoundation.org/2019/01/11/libreoffice-6-2-rc2-is-ready-for-testing/ for release details. Closing again for now.
Comment 39 Christopher 2019-01-13 21:06:53 UTC
Oh, sorry. I apologize... I should have read the thread more carefully! (This is especially embarrassing since I usually insist that *others* do as I have failed here.)

I look forward to LO 6.2 then :) and in the meantime, once again, sorry for being a bit of an idiot.
Comment 40 Julien Nabet 2019-09-26 14:32:30 UTC
*** Bug 127788 has been marked as a duplicate of this bug. ***