tdf#93085 restore orig min window size after startcenter...

is replaced by something else, but use 1,1 if orig was 0,0 otherwise its ignored

Change-Id: Id63ec5875cd8fb4335f0f47586bb30bb5f812145
Reviewed-on: https://gerrit.libreoffice.org/57722
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>